--- a/anile-media-website/src/components/VerticalTabs/VerticalTabs.module.css
+++ b/anile-media-website/src/components/VerticalTabs/VerticalTabs.module.css
@@ -14,3 +14,12 @@
     font-size: medium !important;
     width:100%;
   }
+  .box
+  {
+    margin-top: 50px;
+    display: flex;
+  }
+  .tabs
+  {
+    border-right: 1px solid gray;
+  }
