--- a/anile-media-website/src/components/css/posts.module.css
+++ b/anile-media-website/src/components/css/posts.module.css
@@ -7,6 +7,7 @@
     font-size:3em;
     font-weight: bolder;
     display: flex;
+    text-align: center;
     align-items: center;
     align-content: center;
     justify-content: center;
