--- a/anile-media-website/src/components/css/posts.module.css
+++ b/anile-media-website/src/components/css/posts.module.css
@@ -1,6 +1,7 @@
 .postspage
 {
   font-family: var(--primary-font);
+  margin-bottom: 5%;
 }
 .h1
 {
@@ -23,9 +24,14 @@ justify-content: center;
 margin-top: 20px;
 margin-bottom: 20px;
 }
-.p
+.postspage p
 {
-    line-height: 40px;
+    margin-top: 10px;
+    line-height: 35px;
     justify-content: center;
     align-items: center;
+}
+.postspage li
+{
+  line-height: 35px;
 }
