--- a/anile-media-website/src/components/Landing/Landing.module.css
+++ b/anile-media-website/src/components/Landing/Landing.module.css
@@ -24,15 +24,27 @@
     justify-content: center;
     margin-top: 2%;
   }
-  @media (max-width: 840px) {
+  @media (max-width: 700px) {
  
     .p_landing
     {
-      font-size:16px;
+      font-size:20px !important;
       margin-right: 10%;
     }
     .h1_landing{
-      margin-right: 0%;
-      font-size: 35px;
+      margin-right: 5%;
+      font-size: 35px !important;
+    }
+  }
+  @media (max-width: 1340px) {
+ 
+    .p_landing
+    {
+      font-size:23px;
+      margin-right: 10%;
+    }
+    .h1_landing{
+      margin-right: 15%;
+      font-size: 55px;
     }
   }
