--- a/anile-media-website/src/components/Navbar/Navbar.module.css
+++ b/anile-media-website/src/components/Navbar/Navbar.module.css
@@ -22,9 +22,8 @@
   }
   .company {
     font-family: var(--primary-font) !important;
-    color: black;
+    color: black !important;
     font-size:x-large;
-    border-radius: 10px;
   }
   .company:hover{
     text-decoration: underline;
@@ -45,7 +44,7 @@
   
     text-decoration: underline;
     color: black;
-    background-color: rgb(255, 217, 0);
+    background-color: rgb(255, 217, 0) !important;
   }
   @media (max-width: 700px) {
     .button_active_1
