--- a/anile-media-website/src/components/Navbar/Navbar.module.css
+++ b/anile-media-website/src/components/Navbar/Navbar.module.css
@@ -18,7 +18,7 @@
   }
   .company_button:hover{
     text-decoration: underline;
-    background-color: rgb(255, 217, 0);
+    background-color: rgb(255, 217, 0) !important;
   }
   .company {
     font-family: var(--primary-font) !important;
