--- a/anile-media-website/src/components/css/blogs.module.css
+++ b/anile-media-website/src/components/css/blogs.module.css
@@ -7,6 +7,9 @@
     transform: scale(0.95);
     transition: transform 0.5s ease;
   }
+ .card h1{
+font-weight: 500;
+  }
   .container {
     display: flex;
     font-family: var(--primary-font) !important;
