--- a/anile-media-website/src/components/Miscellaneous/cards.module.css
+++ b/anile-media-website/src/components/Miscellaneous/cards.module.css
@@ -1,14 +1,14 @@
 .title
 {
-    font-weight: 700;
+    font-weight: 700 !important;
 }
 .author
 {
-    font-weight: 500;
+    font-weight: 500 !important;
     font-size: medium;
 }
 .content
 {
     line-height: 30px;
-    color: black;
+    color: black !important;
 }
