--- a/anile-media-website/src/components/Navbar/Navbar.module.css
+++ b/anile-media-website/src/components/Navbar/Navbar.module.css
@@ -8,27 +8,40 @@
     background: var(--text-card) !important;
     font-family: var(--primary-font) !important;
     box-shadow: none !important;
+    transition: 0.25s ease-out;
+  }
+  .appbar_color {
+    background: rgb(80, 80, 80) !important;
+    font-family: var(--primary-font) !important;
+    box-shadow: none !important;
+    transition: 0.25s ease-in;
   }
   
   .company_button {
+    color: white !important;
+    font-weight: 700 !important;
+    font-size: 14px !important;
+    font-family: var(--primary-font) !important;
+  }
+  .company_button_color {
     color: black !important;
     font-weight: 700 !important;
     font-size: 14px !important;
     font-family: var(--primary-font) !important;
   }
-  .company_button:hover{
-    text-decoration: underline;
-    background-color: rgb(255, 217, 0) !important;
-  }
+  
+  
   .company {
+    font-family: var(--primary-font) !important;
+    color: white !important;
+    font-size:x-large;
+  }
+  .company_color {
     font-family: var(--primary-font) !important;
     color: black !important;
     font-size:x-large;
   }
-  .company:hover{
-    text-decoration: underline;
-  }
-  .button_active_1 {
+  .button_active_1_color {
     height: 45px;
     width: 150px;
     margin-left: 60px;
@@ -40,8 +53,26 @@
     border: none;
     font-family: var(--primary-font);
   }
+  .button_active_1 {
+    height: 45px;
+    width: 150px;
+    margin-left: 60px;
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 40px;
+    font-weight: 700;
+    border: none;
+    font-family: var(--primary-font);
+  }
   .button_active_1:hover {
-  
+  transition: 0.25s ease-in;
+    text-decoration: underline;
+    color: black;
+    background-color: rgb(255, 217, 0) !important;
+  }
+  .button_active_1_color:hover {
+    transition: 0.25s ease-in;
     text-decoration: underline;
     color: black;
     background-color: rgb(255, 217, 0) !important;
